--- a/src/app/components/Tabbar2/tabbar.module.css
+++ b/src/app/components/Tabbar2/tabbar.module.css
@@ -46,6 +46,11 @@
 
   .links {
     color: black;
+    text-decoration:none;
+    display: flex;
+    flex-direction:row;
+    justify-contents: center;
+    align-items:center;
   }
 
   .block::before {
