--- a/src/app/components/Tabbar2/tabbar.module.css
+++ b/src/app/components/Tabbar2/tabbar.module.css
@@ -49,7 +49,7 @@
     text-decoration:none;
     display: flex;
     flex-direction:row;
-    justify-contents: center;
+    justify-content: center;
     align-items:center;
   }
 
