--- a/src/app/components/Tabbar2/tabbar.module.css
+++ b/src/app/components/Tabbar2/tabbar.module.css
@@ -52,6 +52,8 @@
     justify-content: center;
     align-items:center;
     gap:0.5vh;
+    height:100%;
+    width:100%
   }
 
   .block::before {
